# kanban

./: .gitignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.desktop.config.ts
app/: AkisApp.tsx  calendarAgenda.ts  dashboardAnalytics.ts  desktop.d.ts  desktop.ts  desktopReports.ts  globals.css  i18n.ts  labelManagement.ts  layout.tsx  memberManagement.ts  page.tsx  problemContext.ts  problemReports.ts  projectFinance.ts  seed.ts  storage.ts  taskTiming.ts  types.ts  v4Workflows.ts  workspaceAnalytics.ts  workspaceManagement.ts
desktop/: index.html  main.tsx
docs/: INSTALLATION_GUIDE.md  KURULUM_REHBERI.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.0.2.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v3.0.1.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.0.1.md  RELEASE_NOTES_v4.1.0.md  RELEASE_NOTES_v4.1.1.md  RELEASE_NOTES_v4.1.2.md  RELEASE_NOTES_v4.2.0.md  V4_1_QA_PLAN.md  V4_DATA_MODEL.md  V4_PRODUCT_PLAN.md  V4_QA_PLAN.md  V4_QA_REPORT.md
public/: manifest.webmanifest  sw.js
scripts/: generate-problem-report-samples.mjs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main-workspace.json
src-tauri/src/: lib.rs  main.rs  storage.rs
tests/: calendar-agenda.test.mjs  canvas-pan.test.mjs  dashboard-analytics.test.mjs  desktop.test.mjs  i18n-currency.test.mjs  label-management.test.mjs  member-management.test.mjs  problem-project-context.test.mjs  problem-reports.test.mjs  (+7 more)
(+16 files in other folders)
