[package]
name = "akis"
version = "2.0.2"
description = "Akış çevrimdışı Kanban panosu ve zihin haritası uygulaması"
authors = ["Hamit Parlak"]
license = "MIT"
edition = "2021"

[lib]
name = "akis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
